# AutonomousRobot

./: .gitignore  README.md
arduino_fopid_tuning/: FoPidTuningTypes.h  README.md  arduino_fopid_tuning.ino
arduino_motor_autotune/: AutotuneTypes.h  arduino_motor_autotune.ino
arduino_motor_calibration/: AutotuneTypes.h  CalibrationTypes.h  README.md  arduino_motor_calibration.ino
arduino_ros2_base_controller/: arduino_ros2_base_controller.ino
docs/chat-logs/: 2026-07-02-00-index.md  2026-07-02-01-project-analysis-pi-ssh.md  2026-07-02-02-apt-conflict-pi-package-not-found.md  2026-07-02-02a-pgp-apt-conflict-full-detail.md  2026-07-02-03-rsync-questions.md  2026-07-02-04-verify-script-unbound-variable-fix.md  2026-07-02-05-apt-source-rewrite-udev-teleop-estop.md  2026-07-02-05a-udev-arduino-lidar-full-detail.md  2026-07-02-05b-teleop-keyboard-full-detail.md  2026-07-02-05c-missing-directories-full-detail.md  2026-07-02-06-desktop-slam-launch-stale-symlink.md  2026-07-02-07-session-doc-generation.md  2026-07-02-08-motor-drift-diagnosis-autotune-tool.md  keygen.md
ros2_ws/src/mdetect_robot/: package.xml  setup.cfg  setup.py
ros2_ws/src/mdetect_robot/config/: base.yaml  lidar.yaml  mdetect_view.rviz  nav2_params.yaml  slam_toolbox.yaml  waypoints.yaml
ros2_ws/src/mdetect_robot/launch/: desktop_navigation.launch.py  desktop_slam.launch.py  robot.launch.py
ros2_ws/src/mdetect_robot/mdetect_robot/: __init__.py  cmd_mux.py  coin_d6_lidar.py  goto_cli.py  nav_monitor.py  serial_bridge.py  teleop_keyboard.py  waypoint_cli.py
ros2_ws/src/mdetect_robot/urdf/: mdetect_robot.urdf.xacro
ros2_ws/src/mdetect_rviz_plugins/: CMakeLists.txt  package.xml  plugins_description.xml
ros2_ws/src/mdetect_rviz_plugins/src/: goto_panel.cpp  goto_panel.hpp  teleop_panel.cpp  teleop_panel.hpp
scripts/: 99-mdetect-robot.rules.example  bootstrap_robot_stack.sh  install_desktop_humble.sh  install_pi_humble.sh  ros_network_env.sh  verify_robot_stack.sh
